// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders borderless button 1`] = `
<button
  className="sc-bdVaJa eoQimV"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders secondary button 1`] = `
<button
  className="sc-bdVaJa kVLEda"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders with large param 1`] = `
<button
  className="sc-bdVaJa bxFJbT"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders with small param 1`] = `
<button
  className="sc-bdVaJa kGjXAd"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`render renders without crashing 1`] = `
<button
  className="sc-bdVaJa ikTBSR"
  data-component="Button"
>
  <span>
    Button
  </span>
</button>
`;
